Version 0.4.3:
  Bug fixes:
  - Allow Private-Use Area characters in input and output without substituion.

Version 0.4.2:
	This release is a re-release of 0.4.1 which removes a non-functional file.

Version 0.4.1:
	Bug fixes:
	- Rewrite files in place if the owner of the file would be changed by
	  creating the file anew. This is a short-term solution for fixing
	  accidental ownership changes due to the scheme used by Tilde to prevent
	  file corruptions.
	- Guard against off-of-line cursor positions in finding next brace. This
	  could cause infinite loops in some cases.

Version 0.4.0:
	New features:
	- Allow writing files if the directory they are in is not writable for the
	  current user. This is ever so slightly more risky than creating a
	  temporary file and moving it over the existing one, which is the default
	  behavior.
	- Add menu items for the new Paste Selection (which pastes the X11 primary
	  selection) and for the new Delete Line actions.
	- Make it possible to disable claiming the primary selection, and to
	  automatically disable this when running over SSH. When running over SSH
	  on high-latency connections and while running a clipboard manager
	  locally, the primary selection claiming can make Tilde work slowly.

	Bug fixes:
	- Default values are now handled properly in the Interface dialog.
	- Remove terminal specific options if they are no longer different from the
	  defaults.

Version 0.3.9:
	Minor updates to Makefile.in for compatibility with Debian packaging.

Version 0.3.8:
	New features:
	- Files can be opened at a specific position, by appending line (and
	  column) number(s). This allows jumping to positions indicated by programs
	  processing text files such as compilers.
	- Allow changing the default interface attributes from the Interface
	  Options dialog

	Bug fixes:
	- Validate the attribute names used in the config file.

Version 0.3.7:
	Bug fixes:
	- Make the dialogs for stepped actions (save, load, quit) abort when the